# Decentralized-Tooling-via-the-Model-Context-Protocol-MCP-and-Corrective-RAG

./: .env.example  .gitignore  README.md  REFLECTION.md  REFLECTION_STAGE3.md  REFLECTION_STAGE4.md  explainability_audit_report.json  mcp_agent_log.db  pyproject.toml
agent_client/: pyproject.toml
agent_client/src/agent_client/: __init__.py  embeddings.py  log_store.py  logger.py  main.py  mcp_client.py  resilience.py  session.py
analysis_dashboard/: pyproject.toml
analysis_dashboard/src/analysis_dashboard/: __init__.py  agent.py  app.py  edgeless_agent.py  embeddings.py  explainability.py  graph_context.py  graph_mapper.py  log_retrieval.py  logger.py  store_reader.py  trend_tools.py
mcp_server/: pyproject.toml
mcp_server/src/mcp_server/: __init__.py  knowledge_base.py  server.py
screenshots/: README.md
