[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "agent-client"
version         = "0.1.0"
description     = "Stage 2 AI Agent — LangChain ReAct + FastMCP Client + dual-stream logging"
requires-python = ">=3.11"
dependencies    = [
    "fastmcp>=2.3.4",
    "langchain>=1.0",
    "langchain-classic>=1.0.7",
    "langchain-community>=0.3",
    "langchain-core>=1.0",
    "langchain-groq>=0.2",
    "langchain-tavily>=0.2.18",
    "langsmith>=0.2",
    "tavily-python>=0.3.9",
    "pydantic>=2.8.0",
]

[project.scripts]
# uv run --package agent-client agent-client
agent-client = "agent_client.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_client"]
