[build-system]
requires      = ["hatchling"]
build-backend = "hatchling.build"

[project]
name            = "analysis-dashboard"
version         = "0.1.0"
description     = "Stage 3 — decoupled Log Analysis Agent + Neo4j graph mapper + Streamlit diagnostic dashboard"
requires-python = ">=3.11"
dependencies    = [
    # Agent + LLM
    "langchain>=1.0",
    "langchain-core>=1.0",
    "langchain-groq>=0.2",
    "langgraph>=1.0",
    # Shared vector log store (read side)
    "langgraph-checkpoint-sqlite>=2.0",
    "fastembed>=0.3",
    "langchain-community>=0.3",
    # Knowledge graph
    "neo4j>=5.24",
    # Dashboard + analytics
    "streamlit>=1.38",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "pandas>=2.2",
    "pydantic>=2.8.0",
    "python-dotenv>=1.0",
]

[project.scripts]
# uv run --package analysis-dashboard analysis-agent
analysis-agent = "analysis_dashboard.agent:main"

[tool.hatch.build.targets.wheel]
packages = ["src/analysis_dashboard"]
